gcc-14.2.0/gcc/testsuite/gdc.test/compilable/test23490.d
version https://git-lfs.github.com/spec/v1
oid sha256:d0a83514d1b0f266a90fbe585c91a90817e6ef25c888ee6b4ec0f0e959b56c10
size 165
